--- a/dog_walker.css
+++ b/dog_walker.css
@@ -120,6 +120,7 @@ a:visited {
     margin: 0% 10%;
     height: 775px;
   }
+}
 @media screen and (max-width: 750px) { /*set sizing for mobile*/
 	.navbar a { /*adjust dog walker heading to center - sourced from https://csswizardry.com/2011/01/create-a-centred-horizontal-navigation/*/
 	display:inline-block;
